--- a/templates/newmenuitem.html
+++ b/templates/newmenuitem.html
@@ -12,10 +12,10 @@
 {% block content %}
 <div class="login-dark container">
         <form action="{{ url_for('newMenuItem', restaurant_id=restaurant.id) }}" method="post">
-            <div class="form-group"><label for="name">Name</label><input class="form-control" type="text" name="name"></div>
-            <div class="form-group"><label for="description">Description</label><input class="form-control" type="text" name="description"></div>
+            <div class="form-group"><label for="name">Name</label><input class="form-control" type="text" name="name" required></div>
+            <div class="form-group"><label for="description">Description</label><textarea class="form-control" type="text" name="description" required></textarea></div>
             <div class="form-group"><label for="course">Course</label><input class="form-control" type="text" name="course"></div>
-            <div class="form-group"><label for="price">Price</label><input class="form-control" type="text" name="price"></div>
+            <div class="form-group"><label for="price">Price</label><input class="form-control" type="text" name="price" required></div>
             <div class="form-group"><button class="btn btn-primary btn-block" type="submit">Create</button></div>
         </form>
     </div>
